# charguana

./: .gitignore  README.md  pyproject.toml  setup.py  unichars.py
.github/workflows/: ci.yml
charaguana/: cjk.py
charguana/: __init__.py  chinese.py  cjk.py  emoji.py  korean.py  perluniprops.py  thai.py  viet.py
charguana/data/emoji/: emoji_chars.txt  emoji_properties.txt  emoji_sequences.txt  emoji_zwj_sequences.txt
charguana/data/perluniprops/: Close_Punctuation.txt  Currency_Symbol.txt  IsAlnum.txt  IsAlpha.txt  IsLower.txt  IsN.txt  IsSc.txt  IsSo.txt  IsUpper.txt  Number.txt  Open_Punctuation.txt  Punctuation.txt
charguana/data/strokecounter/: totalstrokes.txt
scripts/: generate_perluniprops.sh  refresh_emoji.py
tests/: test_charguana.py
