[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charguana"
version = "0.3.0"
description = "A character vomiting library — Unicode character sets for CJK, Thai, Vietnamese, and Perl uniprops."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Liling Tan" }]
requires-python = ">=3.10"
keywords = ["unicode", "character", "vommit", "linguistics", "cjk", "thai", "vietnamese"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/alvations/charguana"
Source = "https://github.com/alvations/charguana"
Issues = "https://github.com/alvations/charguana/issues"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
packages = ["charguana"]

[tool.setuptools.package-data]
charguana = [
    "data/perluniprops/*.txt",
    "data/strokecounter/*.txt",
    "data/emoji/*.txt",
]

[tool.pytest.ini_options]
filterwarnings = ["error"]
testpaths = ["tests"]
